Made changes to the networkingModule ejs and js

--- a/public/stylesheets/networkingModule.css
+++ b/public/stylesheets/networkingModule.css
@@ -6,7 +6,7 @@
 body, html {
   height: 100%;
   margin: 0;
-  overflow: hidden;
+  overflow:visible
 }
 
 #header {
@@ -115,6 +115,10 @@ body, html {
   border-radius: 5px;
   padding: 10px;
   text-align: center;
+}
+
+.hidden {
+  display: none;
 }
 
 .progress-bar {
