--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -53,7 +53,7 @@
           <div class="row">
             <div class="col-md-6">
               <div class="card">
-                <img class="card-img-top" src="img/Circuits.jpg" alt="Circuits" />
+                <img class="card-img-top" src="/img/Circuits.jpg" alt="Circuits" />
                 <div class="card-body">
                   <h5 class="card-title">Networking Lab Module</h5>
                   <p class="card-text">Dive into networking concepts and protocols. Learn about networking fundamentals
@@ -86,5 +86,4 @@
     crossorigin="anonymous"></script>
   <script src="/javascripts/dashboard.js"></script>
 </body>
-
 </html>
