--- a/views/networkingModule.ejs
+++ b/views/networkingModule.ejs
@@ -38,6 +38,8 @@
         <div class="header-section header-buttons">
           <!-- Spawn Kali Instance Button -->
           <button id="spawnKaliButton" class="btn btn-primary">Spawn Kali Lab</button>
+          <!-- Hidden Button -->
+          <button id="newButton" class="hidden" onclick="newButton()">Open Kali Lab</button>
           <!-- Terminate Kali Instance Button -->
           <button id="terminateKaliButton"><i class="fa-solid fa-trash-can" style="color: #ffffff;"></i></button>
         </div>
