Revert "Made changes to the networkingModule ejs and js"
This reverts commit 0db7074cdbb93da114d6d0f6e7346a99780d6122.

--- a/public/stylesheets/networkingModule.css
+++ b/public/stylesheets/networkingModule.css
@@ -6,7 +6,7 @@
 body, html {
   height: 100%;
   margin: 0;
-  overflow:visible
+  overflow: hidden;
 }
 
 #header {
@@ -115,10 +115,6 @@ body, html {
   border-radius: 5px;
   padding: 10px;
   text-align: center;
-}
-
-.hidden {
-  display: none;
 }
 
 .progress-bar {
